Andrew Parise - updated pom to depend on external linkedlist library, rather than duplicate the source

--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.parisesoftware</groupId>
+            <artifactId>linkedlist</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
