--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <artifactId>queue-parent</artifactId>
     <groupId>com.parisesoftware</groupId>
-    <version>1.0.3</version>
+    <version>1.0.4-SNAPSHOT</version>
     <name>Queue :: Parent Pom</name>
     <description>Parent POM to the Queue Data Structure Package</description>
     <packaging>pom</packaging>
@@ -29,7 +29,7 @@
         <connection>scm:git:git://github.com/AParise1217/queue.git</connection>
         <developerConnection>scm:git:git@github.com:AParise1217/queue.git</developerConnection>
         <url>https://github.com/AParise1217/queue</url>
-        <tag>queue-parent-1.0.3</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <licenses>
